--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,9 +12,7 @@
 
     <div class="text-center mt-4">
       <h2 class="title m-0">Welcome back</h2>
-      <h4 class="body-2 m-0">
-        Sign in with your credentials below.
-      </h4>
+      <h4 class="body-2 m-0">Sign in with your credentials below.</h4>
     </div>
 
     <div [formGroup]="form" class="p-6" fxLayout="column" fxLayoutGap="16px">
@@ -42,8 +40,8 @@
             matTooltip="Toggle Visibility"
             type="button"
           >
-            <mat-icon *ngIf="visible" [icIcon]="icVisibility"></mat-icon>
-            <mat-icon *ngIf="!visible" [icIcon]="icVisibilityOff"></mat-icon>
+            <mat-icon class="eye" *ngIf="visible" [icIcon]="icVisibility"></mat-icon>
+            <mat-icon class="eye" *ngIf="!visible" [icIcon]="icVisibilityOff"></mat-icon>
           </button>
           <mat-hint>Click the eye to toggle visibility</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')"
@@ -74,7 +72,10 @@
       </button>
 
       <div class="text-secondary text-center">Don't have an account?</div>
-      <div class="text-secondary secondary2 text-center" [routerLink]="['/register']">
+      <div
+        class="text-secondary secondary2 text-center"
+        [routerLink]="['/register']"
+      >
         Click here to create one
       </div>
     </div>
