--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group>
   <mat-tab label="First"> <exebicao-servicos></exebicao-servicos> </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
+  <mat-tab label="Second"> <exebicao-produtos></exebicao-produtos> </mat-tab>
+  <mat-tab label="Third"> <exebicao-promocoes></exebicao-promocoes> </mat-tab>
 </mat-tab-group>
