--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -1,5 +1,35 @@
-<mat-tab-group>
-  <mat-tab label="First"> <exebicao-servicos></exebicao-servicos> </mat-tab>
-  <mat-tab label="Second"> <exebicao-produtos></exebicao-produtos> </mat-tab>
-  <mat-tab label="Third"> <exebicao-promocoes></exebicao-promocoes> </mat-tab>
-</mat-tab-group>
+<vex-page-layout mode="card">
+
+  <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
+    <div vexContainer>
+      <h2 class="title m-0">Meus Produtos</h2>
+      <!-- <vex-breadcrumbs [crumbs]="['Page Layouts', 'Card', 'Large Header & Tabbed']"></vex-breadcrumbs> -->
+    </div>
+  </vex-page-layout-header>
+
+  <vex-page-layout-content vexContainer>
+    <div class="card">
+      <mat-tab-group>
+        <mat-tab label="Serviços">
+          <div class="p-6">
+            <exebicao-servicos></exebicao-servicos>
+          </div>
+        </mat-tab>
+        <mat-tab label="Produtos">
+          <div class="p-6">
+            <exebicao-produtos></exebicao-produtos>
+          </div>
+        </mat-tab>
+        <mat-tab label="Promoções">
+          <div class="p-6">
+            <exebicao-promocoes></exebicao-promocoes>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </vex-page-layout-content>
+
+</vex-page-layout>
+
+
+
