Alteracoes no layout da pagina servicos

--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -2,7 +2,7 @@
 
   <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
     <div vexContainer>
-      <h2 class="title m-0">Meus Produtos</h2>
+      <h2 class="title m-0">Meus Serviços</h2>
       <!-- <vex-breadcrumbs [crumbs]="['Page Layouts', 'Card', 'Large Header & Tabbed']"></vex-breadcrumbs> -->
     </div>
   </vex-page-layout-header>
