--- a/src/@vex/components/page-layout/page-layout.component.scss
+++ b/src/@vex/components/page-layout/page-layout.component.scss
@@ -14,23 +14,33 @@
   padding-bottom: var(--padding);
 
   .vex-page-layout-header {
+    background-color: rgba($color: #1a202e, $alpha: 0.95);
     margin-bottom: calc(var(--page-layout-toolbar-height) * -1);
-    padding-bottom: var(--page-layout-toolbar-height);
+    padding-top: 2%;
+
+    // padding-bottom: var(--page-layout-toolbar-height);
   }
 
   .vex-page-layout-content {
     > * > .mat-tab-group .mat-tab-label,
     > .mat-tab-group .mat-tab-label {
       height: var(--page-layout-toolbar-height);
-
+      font-size: 15pt;
       &.mat-tab-label-active {
-        opacity: 1;
+        opacity: 0.7;
+        font-size: 20pt;
       }
     }
   }
 }
 
 .vex-page-layout-header {
+  h2{font-size: 30pt;
+    color: rgba($color: #ffffff, $alpha: 0.7);
+    width: 500px;
+    text-align: center;
+    //  padding-left: 10%;
+  }
   align-items: center;
   @apply bg-primary text-primary-contrast;
   box-sizing: content-box !important;
