--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -2,14 +2,17 @@
 
   <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
     <div vexContainer>
-      <h2 class="title m-0">Meus Serviços</h2>
+      <!-- <h2 class="title m-0"> {{legenda}} </h2> -->
+      <h2 class="title m-0" *ngIf="servicos"> Meus Serviços </h2>
+      <h2 class="title m-0" *ngIf="produtos"> Meus Produtos </h2>
+      <h2 class="title m-0" *ngIf="promocoes"> Minhas Promoções </h2>
       <!-- <vex-breadcrumbs [crumbs]="['Page Layouts', 'Card', 'Large Header & Tabbed']"></vex-breadcrumbs> -->
     </div>
   </vex-page-layout-header>
 
   <vex-page-layout-content vexContainer>
     <div class="card">
-      <mat-tab-group>
+      <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
         <mat-tab label="Serviços">
           <div class="p-6">
             <exebicao-servicos></exebicao-servicos>
