--- a/src/app/pages/servicos/exebicao-produtos/exebicao-produtos.component.html
+++ b/src/app/pages/servicos/exebicao-produtos/exebicao-produtos.component.html
@@ -3,38 +3,57 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
 
-    <!-- Aplicação do produto -->
-    <ng-container matColumnDef="aplicacao">
-        <th mat-header-cell *matHeaderCellDef> Aplicação</th>
-        <td mat-cell *matCellDef="let element"> {{element.aplicacao}} </td>
-    </ng-container>
+        <!-- Aplicação do produto -->
+        <ng-container matColumnDef="aplicacao">
+            <th class="color-title" mat-header-cell *matHeaderCellDef> Aplicação</th>
+            <td mat-cell *matCellDef="let element"> {{element.aplicacao}} </td>
+        </ng-container>
 
-    <!-- Name Produto -->
-    <ng-container matColumnDef="nameProduct">
-        <th mat-header-cell *matHeaderCellDef> Nome do Produto </th>
-        <td mat-cell *matCellDef="let element"> {{element.nameProduct}} </td>
-    </ng-container>
+        <!-- Name Produto -->
+        <ng-container matColumnDef="nameProduct">
+            <th class="color-title" mat-header-cell *matHeaderCellDef> Nome do Produto </th>
+            <td mat-cell *matCellDef="let element"> {{element.nameProduct}} </td>
+        </ng-container>
 
-    <!-- Descrição do produto -->
-    <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descrição do Produto </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
+        <!-- Descrição do produto -->
+        <ng-container matColumnDef="description">
+            <th class="color-title" mat-header-cell *matHeaderCellDef> Descrição do Produto </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
 
-    <!-- Quantidade do produto -->
-    <ng-container matColumnDef="quantidade">
-        <th mat-header-cell *matHeaderCellDef> Preço </th>
-        <td mat-cell *matCellDef="let element"> {{element.quantidade}} </td>
-    </ng-container>
+        <!-- Quantidade do produto -->
+        <ng-container matColumnDef="quantidade">
+            <th class="color-title" mat-header-cell *matHeaderCellDef> Quantidade </th>
+            <td mat-cell *matCellDef="let element"> {{element.quantidade}} </td>
+        </ng-container>
 
-    <!-- Preço do produto -->
-    <ng-container matColumnDef="preco">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.preco}} </td>
-    </ng-container>
+        <!-- Preço do produto -->
+        <ng-container matColumnDef="preco">
+            <th class="color-title" mat-header-cell *matHeaderCellDef> Preço </th>
+            <td mat-cell *matCellDef="let element"> {{element.preco}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- Ícone da tabela -->
+        <ng-container matColumnDef="icon">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
+                    <mat-icon class="icon-color">visibility_off</mat-icon>
+                </button>
+                <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
+                    <mat-icon color="primary"> border_color</mat-icon>
+                </button>
+                <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
+                    <mat-icon color="warn">delete</mat-icon>
+                </button>
+                <button mat-icon-button aria-label="ícone Button">
+                    <mat-icon class="icon-color">confirmation_number</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"
