--- a/src/app/pages/servicos/exebicao-produtos/exebicao-produtos.component.html
+++ b/src/app/pages/servicos/exebicao-produtos/exebicao-produtos.component.html
@@ -1,5 +1,3 @@
-<!-- <p>exebicao-produtos works!</p> -->
-
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
 
@@ -10,15 +8,15 @@
         </ng-container>
 
         <!-- Name Produto -->
-        <ng-container matColumnDef="nameProduct">
+        <ng-container matColumnDef="nomeProduto">
             <th class="color-title" mat-header-cell *matHeaderCellDef> Nome do Produto </th>
-            <td mat-cell *matCellDef="let element"> {{element.nameProduct}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.nomeProduto}} </td>
         </ng-container>
 
         <!-- Descrição do produto -->
-        <ng-container matColumnDef="description">
+        <ng-container matColumnDef="descricao">
             <th class="color-title" mat-header-cell *matHeaderCellDef> Descrição do Produto </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
         </ng-container>
 
         <!-- Quantidade do produto -->
@@ -34,7 +32,7 @@
         </ng-container>
 
         <!-- Ícone da tabela -->
-        <ng-container matColumnDef="icon">
+        <ng-container matColumnDef="icone">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
