--- a/src/app/pages/agenda/tabela/tabela-reservas/tabela-reservas.component.html
+++ b/src/app/pages/agenda/tabela/tabela-reservas/tabela-reservas.component.html
@@ -27,13 +27,18 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> dasdas </th>
-        <td mat-cell *matCellDef="let element"></td>
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let element"><select id="">
+          <option value="aguar.retirada">Aguar.retirada</option>
+          <option value="cancelado">Cancelado</option>
+          <option value="entregue">Entregue</option>
+        </select></td>
       </ng-container>
 
-  
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <select name="" id=""><option value="aguar.retirada">Aguar.retirada</option></select>
   
   </div>
