--- a/src/app/pages/agendamentos/agendamentos.component.html
+++ b/src/app/pages/agendamentos/agendamentos.component.html
@@ -1,4 +1,24 @@
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-  <mat-tab label="Agendamentos"><exibicao-agendamentos></exibicao-agendamentos></mat-tab>
-  <mat-tab label="Reservas"><exibicao-reservas></exibicao-reservas></mat-tab>
-</mat-tab-group>
+<vex-page-layout mode="card">
+  <vex-page-layout-header fxLayout="column" fxLayoutAlign="right start">
+    <div vexContainer>
+      <h2 class="title m-0"> {{legenda}} </h2>
+    </div>
+  </vex-page-layout-header>
+  <vex-page-layout-content vexContainer>
+    <div class="card">
+      <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
+        <mat-tab label="Agendamentos">
+          <div class="p-6">
+            <exibicao-agendamentos></exibicao-agendamentos>
+          </div>
+        </mat-tab>
+        <mat-tab label="Reservas">
+          <div class="p-6">
+            <exibicao-reservas></exibicao-reservas>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </vex-page-layout-content>
+
+</vex-page-layout>
