--- a/src/app/pages/agenda/tabela/tabela-reservas/tabela-reservas.component.html
+++ b/src/app/pages/agenda/tabela/tabela-reservas/tabela-reservas.component.html
@@ -27,7 +27,7 @@
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element"><select id="">
           <option value="aguar.retirada">Aguar.retirada</option>
           <option value="cancelado">Cancelado</option>
