--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -11,17 +11,17 @@
       <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
         <mat-tab label="Serviços">
           <div class="p-6">
-            <exebicao-servicos></exebicao-servicos>
+            <exibicao-servicos></exibicao-servicos>
           </div>
         </mat-tab>
         <mat-tab label="Produtos">
           <div class="p-6">
-            <exebicao-produtos></exebicao-produtos>
+            <exibicao-produtos></exibicao-produtos>
           </div>
         </mat-tab>
         <mat-tab label="Promoções">
           <div class="p-6">
-            <exebicao-promocoes></exebicao-promocoes>
+            <exibicao-promocoes></exibicao-promocoes>
           </div>
         </mat-tab>
       </mat-tab-group>
