Criação e edição dos components da tela de "Recuperação de senha"

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -56,7 +56,7 @@
         fxLayoutAlign="space-between center"
       >
         <mat-checkbox class="caption" color="primary">Remember Me</mat-checkbox>
-        <a [routerLink]="['/forgot-password']" class="caption2"
+        <a [routerLink]="['/recupercao-senha']" class="caption2"
           >Forgot Password?</a
         >
       </div>
