--- a/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -1,4 +1,4 @@
-<div class="bg-pattern w-full h-full" fxLayout="column" fxLayoutAlign="center center">
+<div class=" w-full h-full bg-pattern" fxLayout="column" fxLayoutAlign="center center">
   <div [@fadeInUp] class="card overflow-hidden w-full max-w-xs">
     <div class="p-6 pb-0" fxLayout="column" fxLayoutAlign="center center">
       <div class="fill-current text-center">
@@ -15,21 +15,19 @@
     fxLayout=" column" fxLayoutGap="16px">
       <div fxFlex="auto" fxLayout="column">
         <mat-form-field fxFlex="grow">
-
-          <mat-label>E-Mail</mat-label>
-
-          <mat-icon [icIcon]="icMail" class="mr-2" matPrefix></mat-icon>
-          <input formControlName="email" matInput required>
+          <mat-label class="email">E-Mail</mat-label>
+          <input formControlName="email" matInput required />
           <!-- <mat-error *ngIf="form.get('email').hasError('required')">
           We can't recover your password, without your email.
           </mat-error> -->
         </mat-form-field>
+        <mat-hint>Digite um e-mail valido para recuperar sua senha.</mat-hint>
 
         <button (click)="send()" class="recSen" color="primary" mat-raised-button type="button">
           Recuperar Senha
         </button>
         <div class="text-secondary secondary2 text-center"[routerLink]="['/login']">
-          Voltar para o login
+          <u>Voltar para o login</u>
         </div>
       </div>
     </div>
