--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -33,10 +33,11 @@
 
     <ng-container matColumnDef="botao" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let agendamentos">
-        <mat-form-field appearance="fill">
-          <mat-select [formControl]="panelColor"
-                      panelClass="example-panel-{{panelColor.value}}">
+      <td class="tdsticky" mat-cell *matCellDef="let agendamentos">
+        <mat-form-field [class]="agendamentos.status === 'pendente' ?
+                                'pendente' : agendamentos.status === 'aceito' ?
+                                'aceito' : 'recusado'">
+          <mat-select [(value)]="agendamentos.status">
             <mat-option value="pendente">Pendente</mat-option>
             <mat-option value="aceito">Aceito</mat-option>
             <mat-option value="recusado">Recusado</mat-option>
