--- a/src/app/pages/servicos/exebicao-servicos/exebicao-servicos.component.html
+++ b/src/app/pages/servicos/exebicao-servicos/exebicao-servicos.component.html
@@ -54,48 +54,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                showFirstLastButtons 
-                aria-label="Selecionar página do produto">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selecionar página do produto">
     </mat-paginator>
 </div>
-<!--<div class="mat-elevation-z8">
-
-    
-    <table mat-table [dataSource]="dataSource">
-  
-      <ng-container matColumnDef="servico">
-        <th mat-header-cell *matHeaderCellDef> Serviços </th>
-        <td mat-cell *matCellDef="let servicos"> {{servicos.servico}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="produto">
-        <th mat-header-cell *matHeaderCellDef> Produtos </th>
-        <td mat-cell *matCellDef="let servicos"> {{servicos.produto}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="descricao">
-        <th mat-header-cell *matHeaderCellDef> Descrição </th>
-        <td mat-cell *matCellDef="let servicos"> {{servicos.descricao}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="quantidade">
-        <th mat-header-cell *matHeaderCellDef> Quantidade </th>
-        <td mat-cell *matCellDef="let servicos"> {{servicos.quantidade}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="valor">
-        <th mat-header-cell *matHeaderCellDef> Valor </th>
-        <td mat-cell *matCellDef="let servicos"> {{servicos.valor}} </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons 
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
-  -->
