--- a/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -15,15 +15,16 @@
     fxLayout=" column" fxLayoutGap="16px">
       <div fxFlex="auto" fxLayout="column">
         <mat-form-field fxFlex="grow">
+          <mat-hint>Digite um e-mail valido para recuperar sua senha.</mat-hint>
           <mat-label class="email">E-Mail</mat-label>
           <input formControlName="email" matInput required />
-          <!-- <mat-error *ngIf="form.get('email').hasError('required')">
+          <mat-error *ngIf="form.get('email').hasError('required')">
           We can't recover your password, without your email.
-          </mat-error> -->
+          </mat-error>
         </mat-form-field>
-        <mat-hint>Digite um e-mail valido para recuperar sua senha.</mat-hint>
 
-        <button (click)="send()" class="recSen" color="primary" mat-raised-button type="button">
+
+        <button (click)="enviar()" class="recSen" color="primary" mat-raised-button type="button">
           Recuperar Senha
         </button>
         <div class="text-secondary secondary2 text-center"[routerLink]="['/login']">
