--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,8 +11,8 @@
     </div>
 
     <div class="text-center mt-4">
-      <h2 class="title m-0">Welcome back</h2>
-      <h4 class="body-2 m-0">Sign in with your credentials below.</h4>
+      <h2 class="title m-0">Bem-vindo de volta</h2>
+      <h4 class="body-2 m-0">Digite suas credenciais abaixo.</h4>
     </div>
 
     <div [formGroup]="form" class="p-6" fxLayout="column" fxLayoutGap="16px">
@@ -21,11 +21,10 @@
           <mat-label class="email">E-Mail</mat-label>
           <input formControlName="email" matInput required />
           <mat-error *ngIf="form.get('email').hasError('required')"
-            >We need an email address to log you in</mat-error
-          >
+            >Precisamos de um endereço de e-mail para realizar seu login</mat-error>
         </mat-form-field>
         <mat-form-field fxFlex="grow">
-          <mat-label class="password">Password</mat-label>
+          <mat-label class="password">Senha</mat-label>
           <input
             [type]="inputType"
             formControlName="password"
@@ -37,16 +36,15 @@
             (click)="toggleVisibility()"
             mat-icon-button
             matSuffix
-            matTooltip="Toggle Visibility"
+            matTooltip="Alternar"
             type="button"
           >
             <mat-icon class="eye" *ngIf="visible" [icIcon]="icVisibility"></mat-icon>
             <mat-icon class="eye" *ngIf="!visible" [icIcon]="icVisibilityOff"></mat-icon>
           </button>
-          <mat-hint>Click the eye to toggle visibility</mat-hint>
+          <mat-hint>Clique no olho para exibir a senha</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')"
-            >We need a password to log you in</mat-error
-          >
+            >Precisamos de uma senha para realizar seu login</mat-error>
         </mat-form-field>
       </div>
 
@@ -55,9 +53,8 @@
         fxLayout="row"
         fxLayoutAlign="space-between center"
       >
-        <mat-checkbox class="caption" color="primary">Remember Me</mat-checkbox>
-        <a [routerLink]="['/forgot-password']" class="caption2"
-          >Forgot Password?</a
+        <mat-checkbox class="caption" color="primary">Lembrar-me</mat-checkbox>
+        <a [routerLink]="['/forgot-password']" class="caption2">Esqueceu sua senha?</a
         >
       </div>
 
@@ -68,15 +65,12 @@
         mat-raised-button
         type="button"
       >
-        SIGN IN
+      ENTRAR
       </button>
 
-      <div class="text-secondary text-center">Don't have an account?</div>
-      <div
-        class="text-secondary secondary2 text-center"
-        [routerLink]="['/register']"
-      >
-        Click here to create one
+      <div class="text-secondary text-center">Não tem uma conta?</div>
+      <div class="text-secondary secondary2 text-center">
+      <a  [routerLink]="['/register']">Clique aqui para criar uma</a>
       </div>
     </div>
   </div>
