--- a/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -5,29 +5,24 @@
         <img class="w-16" src="assets/img/demo/logo.svg">
       </div>
     </div>
-
     <div class="text-center mt-4">
       <h2 class="title m-0">Esqueceu sua senha?</h2>
       <h4 class="body-2 text-secondary m-0">Enviaremos um e-mail para recuperação de senha</h4>
     </div>
-
-    <div [formGroup]="form" class="p-6"
-    fxLayout=" column" fxLayoutGap="16px">
+    <div [formGroup]="form" class="p-6" fxLayout=" column" fxLayoutGap="16px">
       <div fxFlex="auto" fxLayout="column">
         <mat-form-field fxFlex="grow">
-          <mat-hint>Digite um e-mail valido para recuperar sua senha.</mat-hint>
+          <mat-hint>Digite seu e-mail.</mat-hint>
           <mat-label class="email">E-Mail</mat-label>
           <input formControlName="email" matInput required />
           <mat-error *ngIf="form.get('email').hasError('required')">
-          We can't recover your password, without your email.
+            Não podemos recuperar sua senha, sem seu e-mail.
           </mat-error>
         </mat-form-field>
-
-
         <button (click)="enviar()" class="recSen" color="primary" mat-raised-button type="button">
           Recuperar Senha
         </button>
-        <div class="text-secondary secondary2 text-center"[routerLink]="['/login']">
+        <div class="text-secondary secondary2 text-center" [routerLink]="['/login']">
           <u>Voltar para o login</u>
         </div>
       </div>
