--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -1,4 +1,49 @@
+<!-- Filtro da tebela -->
+<div class="filter">
+  <div class="search">
+    <mat-form-field appearance="standard">
+      <mat-label>Pesquisar agendamento</mat-label>
+      <input matInput>
+    </mat-form-field>
+  </div>
+  <div class="option">
+    <mat-form-field appearance="standard">
+      <mat-label>Status</mat-label>
+      <mat-select>
+        <mat-option value="one">Aceito</mat-option>
+        <mat-option value="two">Pendente</mat-option>
+        <mat-option value="three">Recusado</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="dateStart">
+    <mat-form-field appearance="standard">
+      <mat-label>Data Inicial</mat-label>
+      <input matInput [matDatepicker]="startDate">
+      <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
+      <mat-datepicker #startDate></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="dateEnd">
+    <mat-form-field appearance="standard">
+      <mat-label>Data Final</mat-label>
+      <input matInput [matDatepicker]="endDate">
+      <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
+      <mat-datepicker #endDate></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="btnClear" color="primary">
+    <button mat-button>Limpar <mat-icon>backspace</mat-icon></button>
+  </div>
+  <div class="btnAdd">
+    <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
+  </div>
+</div>
+
+
+<!-- Tabela -->
 <div class="mat-elevation-z8">
+
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="cliente">
