--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -1,9 +1,46 @@
+// Campos de filtro da tabela
+.filter{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  .search{
+    width: 100%;
+    max-width: 35rem;
+    mat-form-field{
+      border-bottom: 1px solid rgb(38, 43, 57);
+      width: 100%;
+    }
+  }
+  .option, .dateStart, .dateEnd{
+    mat-form-field{
+      width: 57%;
+    }
+  }
+  .btnClear{
+    button{
+      background-color: rgb(38, 43, 57);
+      color: rgb(240, 255, 255);
+    }
+  }
+  .btnAdd{
+    button{
+      background-color: rgb(35, 207, 92);
+      color: rgb(240, 255, 255);
+    }
+  }
+  mat-label{
+    color: rgb(38, 43, 57);
+  }
+}
+
+// Tabela de Agendamentos
 table {
   width: 100%;
 }
 
 .pendente{
-  background: rgb(231, 189, 2);
+  background: rgb(252, 225, 104);
   width: 55%;
   display: flex;
   margin-left: 10px;
@@ -12,7 +49,7 @@ table {
 }
 
 .aceito {
-  background: rgb(0, 172, 0);
+  background: rgb(74, 197, 74);
   width: 55%;
   display: flex;
   margin-left: 10px;
@@ -21,7 +58,7 @@ table {
 }
 
 .recusado {
-  background: rgb(201, 1, 1);
+  background: rgb(255, 103, 103);
   width: 55%;
   display: flex;
   margin-left: 10px;
