--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -71,7 +71,7 @@
 
       <div class="text-secondary text-center">Não tem uma conta?</div>
       <div class="text-secondary secondary2 text-center">
-      <a  [routerLink]="['/register']">Clique aqui para criar uma</a>
+      <span><strong><a  href="'/register'">Clique aqui </a></strong> para criar uma</span>
       </div>
     </div>
   </div>
