correção do nome da rota da tela de recuperação de senha

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -55,7 +55,7 @@
         fxLayoutAlign="space-between center"
       >
         <mat-checkbox class="caption" color="primary">Lembrar-me</mat-checkbox>
-        <a [routerLink]="['/forgot-password']" class="caption2">Esqueceu sua senha?</a
+        <a [routerLink]="['/recuperacao-senha']" class="caption2">Esqueceu sua senha?</a
         >
       </div>
 
