--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -1,1 +1,23 @@
+<!-- Filtro da tabela de servicos -->
+<div class="filter">
+  <div class="search">
+    <mat-form-field appearance="standard">
+      <mat-label>Pesquisar serviço</mat-label>
+      <input matInput>
+    </mat-form-field>
+  </div>
+  <div class="option">
+    <mat-form-field appearance="standard">
+      <mat-label>Categoria</mat-label>
+      <mat-select>
+        <mat-option value="one">Todas</mat-option>
+        <mat-option value="two">Cabelo</mat-option>
+        <mat-option value="three">Barba</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="btnAdd">
+    <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
+  </div>
+</div>
 <p>exibicao-servicos works!</p>
