adicionado botão e icones de vizualização de pagina

--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -19,5 +19,9 @@
   <div class="btnAdd">
     <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
   </div>
+  <div class="viewPag">
+    <button mat-button><mat-icon id="lista">view_list</mat-icon></button>
+    <button mat-button><mat-icon id="grade">view_module</mat-icon></button>
+  </div>
 </div>
 <p>exibicao-servicos works!</p>
