--- a/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/src/@vex/layout/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -17,8 +17,8 @@
   </div>
 
   <div class="dropdown-content">
-    <a (click)="close()"
-       *ngFor="let item of items; trackBy: trackById"
+    <a *ngFor="let item of items; trackBy: trackById"
+       (click)="close(item)"
        [routerLink]="item.route"
        class="notification"
        fxLayout="row"
