Fiz o ngIf para a vizualização da pagina

--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -20,8 +20,10 @@
     <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
   </div>
   <div class="viewPag">
-    <button mat-button><mat-icon id="lista">view_list</mat-icon></button>
-    <button mat-button><mat-icon id="grade">view_module</mat-icon></button>
+    <button mat-button (click)="vizualizar()">
+      <mat-icon *ngIf="verLista">view_list</mat-icon>
+      <mat-icon *ngIf="verGrade">view_module</mat-icon>
+    </button>
   </div>
 </div>
 <p>exibicao-servicos works!</p>
