--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
@@ -26,9 +26,9 @@
       color: rgb(240, 255, 255);
     }
   }
-  .viewPag{
 
-  }
+  .viewPag {}
+
   mat-label {
     color: rgb(38, 43, 57);
   }
