adequando a tabela exibição reservas para o padrão exibido

--- a/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.scss
+++ b/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.scss
@@ -1,15 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
-
-
-
 table {
-    width: 100%;
-  }
+  width: 100%;
+}
 
-  th {
-    font-weight: bolder;
-    font-size: 16px;
-    line-height: 18.75px;
-    font-family: 'Roboto', sans-serif;
-    
-  }
+.aguar-retirada{
+  background: rgb(252, 225, 104);
+  width: 55%;
+  display: flex;
+  margin-left: 10px;
+  margin-top: 3px;
+  border-radius: 8px;
+}
+
+.entregue {
+  background: rgb(74, 197, 74);
+  width: 55%;
+  display: flex;
+  margin-left: 10px;
+  margin-top: 3px;
+  border-radius: 8px;
+}
+
+.cancelado {
+  background: rgb(255, 103, 103);
+  width: 55%;
+  display: flex;
+  margin-left: 10px;
+  margin-top: 3px;
+  border-radius: 8px;
+}
+
+th{
+  font-size: 14.5px !important;
+  font-weight: 700 !important;
+  color: black !important;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex{
+  background-color: transparent;
+}
+
+.mat-form-field-underline{
+  opacity: 0 !important;
+  padding: 0 !important;
+}
+
+.mat-form-field {
+  padding: 0 !important;
+}
+
+.mat-form-field-wrapper{
+  padding: 0;
+}
+
+td.mat-cell:last-of-type{
+  padding-right: 0 !important;
+  display: flex !important;
+}
+
+.mat-select-arrow-wrapper {
+  height: 1px !important;
+  flex-shrink: 0;
+  display: flex !important;
+  align-items: center;
+}
+
+.mat-form-field-infix {
+  border: 0 !important;
+}
+
+.select-option{
+  width: 105px;
+}
