--- a/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
+++ b/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
@@ -1,5 +1,5 @@
-<div class="screen-table">
-    <table mat-table id="table" [dataSource]="dataSource">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="cliente">
         <th mat-header-cell *matHeaderCellDef> Cliente </th>
@@ -26,13 +26,19 @@
         <td mat-cell *matCellDef="let element"> {{element.dtRetirada}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="status">
+      <ng-container matColumnDef="status" stickyEnd>
         <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element"><select id="">
-          <option value="aguar.retirada">Aguar.retirada</option>
-          <option value="cancelado">Cancelado</option>
-          <option value="entregue">Entregue</option>
-        </select></td>
+        <td class="tdsticky" mat-cell *matCellDef="let element">
+          <mat-form-field [class]="element.status === 'aguar-retirada' ?
+                                  'aguar-retirada' : element.status === 'entregue' ?
+                                  'entregue' : 'cancelado'">
+            <mat-select class="select-option" [(value)]="element.status">
+              <mat-option value="aguar-retirada">Aguar.retirada</mat-option>
+              <mat-option value="entregue">Entregue</mat-option>
+              <mat-option value="cancelado">Cancelado</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
