--- a/src/app/pages/agendamentos/agendamentos.component.html
+++ b/src/app/pages/agendamentos/agendamentos.component.html
@@ -9,12 +9,12 @@
       <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
         <mat-tab label="Agendamentos">
           <div class="p-6">
-            <exibicao-agendamentos></exibicao-agendamentos>
+            <vex-exibicao-agendamentos></vex-exibicao-agendamentos>
           </div>
         </mat-tab>
         <mat-tab label="Reservas">
           <div class="p-6">
-            <exibicao-reservas></exibicao-reservas>
+            <vex-exibicao-reservas></vex-exibicao-reservas>
           </div>
         </mat-tab>
       </mat-tab-group>
