--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+    <table aria-label="tableServicos" mat-table [dataSource]="dataSource">
 
         <!-- Aplicação do Serviço -->
         <ng-container matColumnDef="aplicacao">
