--- a/src/@vex/components/config-panel/config-panel.component.html
+++ b/src/@vex/components/config-panel/config-panel.component.html
@@ -43,7 +43,7 @@
          [class.mt-6]="!first"
          class="rounded">
       <div class="layout-image rounded overflow-hidden relative hover:bg-hover shadow-8">
-        <img [src]="config.imgSrc" class="w-full block">
+        <img alt="" [src]="config.imgSrc" class="w-full block">
         <div class="layout-image-overlay" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="4px">
           <button (click)="setConfig(config.id, Style.light)"
                   class="bg-contrast-white text-contrast-black"
