--- a/src/@vex/components/widgets/widget-assistant/widget-assistant.component.html
+++ b/src/@vex/components/widgets/widget-assistant/widget-assistant.component.html
@@ -1,6 +1,6 @@
 <div class="card bg-primary" fxLayout="row" fxLayout.xs="column">
   <div class="p-4 ml-4" fxFlex="none" fxFlexAlign="center">
-    <img src="assets/img/illustrations/checklist.svg" style="height: 168px; width: 152px">
+    <img alt="" src="assets/img/illustrations/checklist.svg" style="height: 168px; width: 152px">
   </div>
 
   <div class="p-6 text-primary-contrast" fxFlex="auto">
