--- a/src/@vex/components/widgets/widget-table/widget-table.component.html
+++ b/src/@vex/components/widgets/widget-table/widget-table.component.html
@@ -11,7 +11,7 @@
     </button>
   </div>
 
-  <table [dataSource]="dataSource" class="w-full overflow-auto" mat-table matSort>
+  <table aria-label="widget-table" [dataSource]="dataSource" class="w-full overflow-auto" mat-table matSort>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
