--- a/src/@vex/layout/footer/footer.component.html
+++ b/src/@vex/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
       <a href="https://liquipedia.net/dota2/Natus_Vincere"
           target="_blank" mat-button fxFlex="0 0 auto" fxLayout="row"
           fxLayoutAlign="start center">
-          <img style="max-width: 60px; border-radius: 60px;" src="assets/ondline.jpg">
+          <img alt="" style="max-width: 60px; border-radius: 60px;" src="assets/ondline.jpg">
       </a>
       <div class="info">
         <div fxLayout="row" style="margin-left: -80%;">
