--- a/src/@vex/styles/partials/_horizontal.scss
+++ b/src/@vex/styles/partials/_horizontal.scss
@@ -33,7 +33,7 @@
 
       &:not(.sidenav-collapsed) .sidenav-content {
         margin-left: var(--sidenav-width) !important;
-        margin-right: 0 !important;;
+        margin-right: 0 !important;
       }
     }
   }
