--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -44,7 +44,7 @@
 <!-- Tabela -->
 <div class="mat-elevation-z8">
 
-  <table mat-table [dataSource]="dataSource">
+  <table aria-label="tabela-agendamentos" mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="cliente">
       <th mat-header-cell *matHeaderCellDef> Cliente </th>
