--- a/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
+++ b/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
@@ -1,5 +1,5 @@
 <div class="screen-table">
-    <table mat-table id="table" [dataSource]="dataSource">
+    <table aria-label="tabela-reservas" mat-table id="table" [dataSource]="dataSource">
 
       <ng-container matColumnDef="cliente">
         <th mat-header-cell *matHeaderCellDef> Cliente </th>
