--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
+  <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
 
       <!-- Aplicação do produto -->
       <ng-container matColumnDef="aplicacao">
