fiz o modal aparecer quando clicar no botão adicionar do filtro da tebela de servicos

--- a/src/app/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -2,9 +2,7 @@
 	<h2 class="title m-0">Construção</h2>
 </div>
 <mat-dialog-content>
-	<div class="alinhar">
-        <img style="margin-top: 8%;" src="assets/img/construcao.svg" alt="">
-    </div>
+	formulario de cadastro
 </mat-dialog-content>
 <mat-dialog-actions align="end">
 	<button mat-button mat-dialog-close>Cancelar</button>
