--- a/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
+++ b/src/app/pages/agendamentos/exibicao-reservas/exibicao-reservas.component.html
@@ -1,10 +1,9 @@
 <div class="mat-elevation-z8">
   <table aria-label="tabela-reservas" mat-table [dataSource]="dataSource">
-
     <ng-container matColumnDef="cliente">
-        <th mat-header-cell *matHeaderCellDef>Cliente</th>
-        <td mat-cell *matCellDef="let element">{{ element.cliente }}</td>
-      </ng-container>
+      <th mat-header-cell *matHeaderCellDef>Cliente</th>
+      <td mat-cell *matCellDef="let element">{{ element.cliente }}</td>
+    </ng-container>
     <ng-container matColumnDef="produto">
       <th mat-header-cell *matHeaderCellDef>Produto</th>
       <td mat-cell *matCellDef="let element">{{ element.produto }}</td>
@@ -28,9 +27,15 @@
     <ng-container matColumnDef="status" stickyEnd>
       <th mat-header-cell *matHeaderCellDef></th>
       <td class="tdsticky" mat-cell *matCellDef="let element">
-        <mat-form-field [class]="element.status === 'aguar-retirada' ?
-                                'aguar-retirada' : element.status === 'entregue' ?
-                                'entregue' : 'cancelado'">
+        <mat-form-field
+          [class]="
+            element.status === 'aguar-retirada'
+              ? 'aguar-retirada'
+              : element.status === 'entregue'
+              ? 'entregue'
+              : 'cancelado'
+          "
+        >
           <mat-select class="select-option" [(value)]="element.status">
             <mat-option value="aguar-retirada">Aguar.retirada</mat-option>
             <mat-option value="entregue">Entregue</mat-option>
