--- a/src/app/modais/construcao-modal/construcao-modal.component.html
+++ b/src/app/modais/construcao-modal/construcao-modal.component.html
@@ -7,7 +7,13 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-	<button mat-button mat-dialog-close>Cancelar</button>
-	<button mat-button [mat-dialog-close]="true" mat-raised-button
-		color="primary">Adicionar</button>
+  <button mat-button mat-dialog-close>Cancelar</button>
+  <button
+    mat-button
+    [mat-dialog-close]="true"
+    mat-raised-button
+    color="primary"
+  >
+    Adicionar
+  </button>
 </mat-dialog-actions>
