alteração da tela modal

--- a/src/app/modais/planos/planos.component.html
+++ b/src/app/modais/planos/planos.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="planos-precos" *ngIf="openModal">
+<div class="planos-precos">
   <div class="bg-card py-16 px-gutter">
     <h1 class="display-1 mt-4 mb-4 text-center">Selecione um plano</h1>
     <h2 class="subheading-2 text-hint text-center max-w-lg mx-auto m-0">
@@ -66,9 +66,8 @@
       <button
         class="rounded-full max-w-full w-200"
         class="primary"
-        mat-raised-button
-        type="button"
-      >
+        mat-button
+        type="button">
         CONTRATAR
       </button>
     </div>
