Atualização do modal planos(botões e tamanhos)

--- a/src/app/modais/planos/planos.component.html
+++ b/src/app/modais/planos/planos.component.html
@@ -1,6 +1,6 @@
 <!-- Modal -->
 <div class="planos-precos">
-  <div class="bg-card py-16 px-gutter">
+  <div class="bg-card py-4 px-gutter">
     <h1 class="display-1 mt-4 mb-4 text-center">Selecione um plano</h1>
     <h2 class="subheading-2 text-hint text-center max-w-lg mx-auto m-0">
       Selecione um plano que cabe no seu bolso e aproveite todos os benefícios
@@ -21,8 +21,7 @@
 
       <button
         class="rounded-full max-w-full w-200"
-        class="primary"
-        mat-raised-button
+        mat-raised-button color="primary"
         type="button"
       >
         CONTRATAR
@@ -43,8 +42,7 @@
 
       <button
         class="rounded-full max-w-full w-200"
-        class="primary"
-        mat-raised-button
+        mat-raised-button color="primary"
         type="button"
       >
         CONTRATAR
@@ -65,8 +63,7 @@
 
       <button
         class="rounded-full max-w-full w-200"
-        class="primary"
-        mat-button
+        mat-raised-button color="primary"
         type="button">
         CONTRATAR
       </button>
